# AssessAI

./: .env  .env.example  Dockerfile  Readme.md  chatbot_controller.py  config.toml  main.py  pyproject.toml  requirements.txt
database/: models.py
interview/: question_generator.py  state_manager.py
models/: llm_client.py
templates/: consent_prompts.py  prompts.py
utils/: tech_parser.py  validators.py
